<resources>
    <string name="app_name">Calculadora Precio Ventanas</string>
    <string name="l15">L-15</string>
    <string name="l20">L-20</string>
    <string name="l25">L-25</string>
    <string name="ancho">Ingrese ancho en cm</string>
    <string name="alto">Ingrese alto en cm</string>
    <string name="textoPrecio">Precio:</string>
    <string name="calcular">CALCULAR</string>
    <string name="version">DEMO by Jorge Echeverría R.</string>
</resources>
